--- a/DavidProyect/BackEnd/src/main/resources/application.properties
+++ b/DavidProyect/BackEnd/src/main/resources/application.properties
@@ -1,9 +1,19 @@
 
- spring.jpa.hibernate.ddl-auto=update
- spring.datasource.url=jdbc:mysql://localhost:3306/backendmgb?useSSL=false&serverTimezone=UTC
- spring.datasource.username=root
- spring.datasource.password=
- spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+ #spring.datasource.url=jdbc:mysql://localhost:3306/backendmgb?useSSL=false&serverTimezone=UTC
+ #spring.datasource.username=root
+ #spring.datasource.password=
+ # ambiente de producci\u00f3n
+
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+spring.datasource.url=jdbc:mysql://u9malyqzuovtmxj7:QYjiOEswz5EqKLCFhpsd@bgylco4iodpt5mvc0owb-mysql.services.clever-cloud.com:3306/bgylco4iodpt5mvc0owb
+spring.datasource.username=u9malyqzuovtmxj7
+spring.datasource.password=QYjiOEswz5EqKLCFhpsd
+spring.jpa.open-in-view=false
 
 jwt.secret=secret
 jwt.expiration=36000
